--- a/Richie.html
+++ b/Richie.html
@@ -5,11 +5,11 @@
   </div>
   
   <ol>
-  <li> </li>
-   <li> </li>
-    <li> </li>
-     <li> </li>
-      <li> </li>
+  <li> Richie finds himself constantly checking his phone, and wants to fill this time more productively. </li>
+   <li> Richie searches casually for something that grabs his interest.</li>
+    <li> Richie takes his book up to the front desk, no one is there, so he knocks on the staff door and informs them.</li>
+     <li> Richie gives his card to the librarian, and she scans both the book and his card. </li>
+      <li> Richie now has an interesting book, and can break his bad habbit. </li>
   
   </ol>
   
