--- a/Richie.html
+++ b/Richie.html
@@ -1,4 +1,5 @@
- <body>
+ <html>
+  <body>
  
  <div id="media">
     <img src="https://78.media.tumblr.com/37a66fdcddcb310cb42fac867ca56a38/tumblr_pd7tj0g44P1xchmeyo2_1280.png" />
@@ -18,11 +19,11 @@
   </div>
   
   <ol>
-  <li> </li>
-   <li> </li>
-    <li> </li>
-     <li> </li>
-      <li> </li>
+  <li> Richie is really happy to have figured out a soluition to break his phone-checking habbit. </li>
+   <li> Richie enjoys browsing the library which has lots of option about topics he's interested in and studying.</li>
+    <li> Richie is annoyed, and nervous as he now has to disrupt all the staff. </li>
+     <li> Richie is meet with blunt response, and doesn't enjoy issuing his book out. His mood has evened out, and he just wants to let everyone get back to their work. </li>
+      <li> Richie leaves the irritated libr</li>
   
   </ol>
   
@@ -30,3 +31,4 @@
  
   
   </body>
+</html>
