--- a/Richie.html
+++ b/Richie.html
@@ -23,7 +23,7 @@
    <li> Richie enjoys browsing the library which has lots of option about topics he's interested in and studying.</li>
     <li> Richie is annoyed, and nervous as he now has to disrupt all the staff. </li>
      <li> Richie is meet with blunt response, and doesn't enjoy issuing his book out. His mood has evened out, and he just wants to let everyone get back to their work. </li>
-      <li> Richie leaves the irritated libr</li>
+      <li> Richie leaves the irritated librarian, and he is once again very happy. He has his new book, and no reason to check his phone. </li>
   
   </ol>
   
