--- a/Richie.html
+++ b/Richie.html
@@ -34,7 +34,13 @@ li{
 
   </ol>
 
-
+<center>
+  <p>
+<a href="https://abirkett.github.io/interaction-projectone/">
+<img border="0" alt="Ru" src="https://78.media.tumblr.com/c15d80ad445624304490c3f8eb358a0a/tumblr_pd8b64XIOZ1xchmeyo1_250.jpg" width="50" height="50">
+</a>
+</p>
+</center>
 
   </body>
 </html>
